# ENGINEERING_THESIS

./: .gitignore  readme.md
CMSIS temp/: main.cpp
PCB/lib/1825967-1/: 1825967-1.kicad_sym  SW_1825967-1.kicad_mod
PCB/transmitter/: fp-info-cache  transmitter-B_Cu.gbr  transmitter-B_Mask.gbr  transmitter-B_Paste.gbr  transmitter-B_Silkscreen.gbr  transmitter-Edge_Cuts.gbr  transmitter-F_Cu.gbr  transmitter-F_Mask.gbr  transmitter-F_Paste.gbr  transmitter-F_Silkscreen.gbr  transmitter-NPTH.drl  transmitter-PTH.drl  transmitter.csv  transmitter.kicad_pcb  transmitter.kicad_prl  transmitter.kicad_pro  transmitter.kicad_sch  transmitter.xml
PCB/transmitter/transmitter/: transmitter.kicad_pro  transmitter.kicad_sch
RC-5/: main.cpp
audio_preprocessing/: Dockerfile  pyproject.toml  requirements.txt  script.py
audio_preprocessing/audio_preprocess/: __init__.py  audio_preprocess.py
audio_preprocessing/spectogram/: __init__.py  spectogram.py  window.py
blinkcpp/: CMakeLists.txt  blinkcpp.cpp
colab/: ASR.ipynb  Praca_Inżynierska_Grafiki.ipynb
pico-tflmicro/: CMakeLists.txt  main.cpp  model.cpp  model.h  pre_def_mfcc.cpp
pico_tflmicro/: main.cpp
record_samples/: CMakeLists.txt  record_samples.cpp
record_samples/record_script/: mean_monitor.py  min_max_monitor.py  pyproject.toml  record.ipynb
serial_monitor/: min_max_monitor.py  serial_plotter.py
t-SNE/: pyproject.toml  script.py
t-SNE/audio_preprocess/: audio_preprocess.py
t-SNE/spectogram/: __init__.py  spectogram.py
tests/CMSIS temp/: CMakeLists.txt
tests/RC-5/: CMakeLists.txt  RC5.cpp  RC5.h  main.cpp
tests/blinkcpp/: CMakeLists.txt  blinkcpp.cpp
tests/serial_monitor/: mean_monitor.py
tests/transmitter_cpp/random/: gpio_interrupt_toggle_led.cpp  work_in_progress_bulk_transmit.cpp
transmitter_cpp/: CMakeLists.txt  transmitter_cpp.cpp
transmitter_cpp/random/: gpio_interrupt_toggle_led.cpp  temp.cpp
transmitter_micropython/: main.py
